1. Добавлен класс FilmExtendedRowMapper - маппер для получения расшироенных данных о фильме (с жанрами, mpa, режиссерами) 2. Теперь мы сразу загружаем полную таблицу фильмов с расширениями и id необходимыми нам, теперь мы избавились от цикла map и каждый фильм не запрашивает расширения